# PhotoDistorter

./: CMakeLists.txt  README.md
headers/: clickablelabel.h  distortion.h  distortionsettings.h  distortionwidget.h  distortionxwidget.h  distortionxywidget.h  distortionywidget.h  gridsizewidget.h  listdistortionitem.h  mainwidget.h  mathparser.h  qtutils.h  savedistortionwidget.h  templatedistortionloader.h  templatedistortionwidget.h  templatedistortionwidgetitem.h  verticalscrollarea.h  workerdistortion.h  workspacewidget.h
src/: clickablelabel.cpp  distortion.cpp  distortionsettings.cpp  distortionwidget.cpp  distortionxwidget.cpp  distortionxywidget.cpp  distortionywidget.cpp  gridsizewidget.cpp  listdistortionitem.cpp  main.cpp  mainwidget.cpp  mathparser.cpp  qtutils.cpp  savedistortionwidget.cpp  templatedistortionloader.cpp  templatedistortionwidget.cpp  templatedistortionwidgetitem.cpp  verticalscrollarea.cpp  workerdistortion.cpp  workspacewidget.cpp
templates/default/x/: func0.txt  func1.txt  func10.txt  func11.txt  func12.txt  func13.txt  func2.txt  func3.txt  func4.txt  func5.txt  func6.txt  func7.txt  func8.txt  func9.txt
templates/default/xy/: func0.txt  func1.txt  func10.txt  func11.txt  func12.txt  func13.txt  func14.txt  func2.txt  func3.txt  func4.txt  func5.txt  func6.txt  func7.txt  func8.txt  func9.txt
templates/default/y/: func0.txt  func1.txt  func10.txt  func11.txt  func12.txt  func13.txt  func2.txt  func3.txt  func4.txt  func5.txt  func6.txt  func7.txt  func8.txt  func9.txt
